# nrf52840-mdk-blinky

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
