[package]
name = "mdk-test"
version = "0.1.0"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52840-pac = "0.8"
nrf52840-hal = { git = "https://github.com/nrf-rs/nrf52-hal" }
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.4"
panic-halt = "0.2"

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1

[profile.dev]
opt-level = "s"
debug = false
